fix tracking pixel white space

--- a/wp-content/themes/tcf-theme/assets/css/style.css
+++ b/wp-content/themes/tcf-theme/assets/css/style.css
@@ -1462,3 +1462,7 @@ Note: I am use overrides to prevent merge conflicts
 
 
 }
+
+body > img:last-child {
+	display: none;
+}
